# synapse-gateway

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.es-ES.md  README.md  docker-compose.e2e.yml
.github/scripts/: bump-and-release.sh
.github/workflows/: bump-synapse-gateway.yml  bump-synapse-proxy.yml  ci.yml  release.yml
config/: pricing.toml  routes.toml
config/e2e/: pricing.toml
crates/synapse-context/: Cargo.toml
crates/synapse-context/src/: lib.rs
crates/synapse-gateway/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md
crates/synapse-gateway/config/: guardrails.toml  routes.toml
crates/synapse-gateway/config/e2e/: routes.toml
crates/synapse-gateway/examples/: embed.rs
crates/synapse-gateway/migrations/: 0001_usage_events.sql
crates/synapse-gateway/src/: error.rs  gateway.rs  lib.rs  main.rs  observability.rs  resilience.rs  server.rs  vertex_native.rs
crates/synapse-gateway/src/embeddings/: openai.rs  vertex.rs
crates/synapse-gateway/src/guard/: mod.rs
crates/synapse-gateway/src/ledger/: connect.rs  event.rs  mod.rs  postgres.rs  pubsub.rs  sns.rs  sqlite.rs
crates/synapse-gateway/src/providers/: genai_provider.rs
crates/synapse-gateway/src/routing/: classify.rs  embeddings.rs  request.rs  stream.rs  table.rs
crates/synapse-gateway/tests/: chat_completions.rs  gemini_passthrough.rs  guardrails_http.rs  ledger_sqlite.rs  vertex_native_gateway.rs
crates/synapse-mcp/: CHANGELOG.md  Cargo.toml  README.md
crates/synapse-mcp/src/: admin.rs  gateway.rs  lib.rs  registry.rs
crates/synapse-mcp/tests/: gateway_roundtrip.rs  rmcp_spike.rs
crates/synapse-proxy/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  synapse-proxy.toml
crates/synapse-proxy/src/: admin.rs  builder.rs  config.rs  context.rs  health.rs  http_client.rs  lib.rs  main.rs  metrics.rs  proxy.rs  router.rs
crates/synapse-proxy/src/transform/: error_remap.rs  inject.rs  mod.rs  wrap.rs
crates/synapse-proxy/tests/: parity.rs  passthrough.rs  pipeline.rs
scripts/: wait-for-gateway.sh
sdd/: task-1-report.md
src/: config.rs  error.rs  gateway.rs  main.rs  pricing.rs  vertex_native.rs
src/embeddings/: mod.rs
src/guard/: engine.rs  mod.rs  policy.rs  scanners.rs
src/providers/: mod.rs  vertex_auth.rs
src/routing/: content_parts.rs  embeddings.rs  executor.rs  mod.rs  table.rs
tests/: embeddings.rs  guardrails_http.rs  vertex_native_e2e.rs
