[workspace]
resolver = "2"
members = [
    "crates/synapse-gateway",
    "crates/synapse-proxy",
    "crates/synapse-mcp",
    "crates/synapse-context",
]

[workspace.package]
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/sustentabilitas/synapse-gateway"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
futures = "0.3"
bytes = "1"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std"] }
rmcp = { version = "2.2", features = ["server", "client", "transport-streamable-http-server", "transport-streamable-http-client-reqwest"] }
synapse-context = { path = "crates/synapse-context" }
